# huestatus

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml
.claude/: settings.json  settings.local.json
docs/: design.md  fix-capacity-overflow.md  fix-plan-effect-parameter-error.md  hue-bridge-diagnostic-checklist.md  idea.md  implementation-status.md  manual-api-test-procedures.md  setup-issue.md
docs/other/: errortemp.md  more-error.md  setup-3-ok-but-error.md
src/: error.rs  lib.rs  main.rs
src/bridge/: auth.rs  client.rs  discovery.rs  mod.rs
src/config/: file.rs  mod.rs  validation.rs
src/scenes/: create.rs  execute.rs  mod.rs
src/setup/: interactive.rs  mod.rs  validation.rs
tests/integration/: cli.rs  config.rs
