[package]
name = "huestatus"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for displaying build status using Philips Hue lights"
authors = ["mimikun <mimikun@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/mimikun/huestatus"
keywords = ["hue", "philips", "cli", "status", "lights"]
categories = ["command-line-utilities"]

[[bin]]
name = "huestatus"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform directory handling
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# mDNS discovery
mdns = "3.0"

# Terminal output
console = "0.15"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockito = "1.0"
tempfile = "3.0"

[profile.release]
# Optimize for size and performance
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compile times during development
opt-level = 0
debug = true